activity_system/public/stylesheets/style.css
body {
  font-family: 'Open Sans', sans-serif;
}

a {
  color: #00B7FF;
}


.md-block {
    margin-bottom: 20px; 
     
}

.formclass {

}

.formrow {
    
    margin-bottom: 20px; 
}

.formcontainer {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 16px;
}

.summary {
    margin-bottom: 10px;
}

.filters {
    margin-bottom: 10px;
}

.filters h3{
    margin-top: 0;
}

.input-con{
    margin: 5px 0;
}

.filter-block {
    margin-right: 30px;
    max-width: 200px;
    overflow: hidden;
}

.md-errors-spacer {
    display: none;
}

.login-body {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
}

.login-content-container {
    padding: 16px;
}

.site-container {
    padding: 16px;
}

